[package]
name = "crypto-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
bip39 = "2.1.0"
ed25519-dalek = "1"
hex = "0.4.3"
hmac = { version = "0.9", default-features = false }
sha2 = { version = "0.9", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
slip10 = "0.4.3"
bs58 = "0.5.1"
